okd/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dccheck-frontend
  labels:
    app: dccheck-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dccheck-frontend
  template:
    metadata:
      labels:
        app: dccheck-frontend
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
        - name: frontend
          image: registry.intranet/dccheck/frontend:latest
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /index.html
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
