okd/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: dccheck-backend
  labels:
    app: dccheck-backend
spec:
  selector:
    app: dccheck-backend
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
