okd/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: dccheck
  labels:
    app: dccheck-frontend
spec:
  host: dccheck.smart.intranet
  to:
    kind: Service
    name: dccheck-frontend
    weight: 100
  port:
    targetPort: 80
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
